fixed Navbar to account for all component styling for legibility and elegance

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,7 @@
   padding: 0;
   /* background-color: #fbf3e9; */
 }
+html{
+background-color: rgba(255,250,240, 0.9);
+
+}
